# proto-compose

./: .gitignore  Cargo.toml  justfile
builder/: Cargo.toml
builder/src/: lib.rs  main.rs
docs/: book.toml
docs/src/: SUMMARY.md
no-std-models/: Cargo.toml
no-std-models/src/: lib.rs
prelude/: Cargo.toml
prelude/src/: decl_macros.rs  extension.rs  field.rs  file.rs  lazy.rs  lib.rs  macros.rs  message.rs  oneof.rs  optional.rs  package.rs  proto_enum.rs  proto_message.rs  proto_type.rs  registry.rs  rendering_utils.rs  service.rs  test_utils.rs  well_known_types.rs
prelude/src/guide/: collecting_items.md  correctness.md  defining_messages.md  enum_ref.md  extension_ref.md  field_ref.md  generating_files.md  introduction.md  message_ref.md  mod.rs  oneof_ref.md  proxied.md  reflection_usage.md  reusing_oneofs.md  server_usage.md  service_ref.md
prelude/src/options/: common_options.rs  mod.rs
prelude/src/validators/: any.rs  bool.rs  builder_internals.rs  bytes.rs  cel.rs  common_strings.rs  duration.rs  enums.rs  field_context.rs  field_mask.rs  floats.rs  integers.rs  lookup.rs  map.rs  message.rs  mod.rs  oneof.rs  repeated.rs  string.rs  timestamp.rs  violations.rs
prelude/src/validators/any/: builder.rs
prelude/src/validators/any/builder/: state.rs
prelude/src/validators/bool/: builder.rs
prelude/src/validators/bool/builder/: state.rs
prelude/src/validators/bytes/: builder.rs
prelude/src/validators/bytes/builder/: state.rs
prelude/src/validators/cel/: cel_trait.rs
prelude/src/validators/duration/: builder.rs
prelude/src/validators/duration/builder/: state.rs
prelude/src/validators/enums/: builder.rs
prelude/src/validators/enums/builder/: state.rs
prelude/src/validators/field_mask/: builder.rs
prelude/src/validators/field_mask/builder/: state.rs
prelude/src/validators/floats/: builder.rs
prelude/src/validators/floats/builder/: state.rs
prelude/src/validators/integers/: builder.rs
prelude/src/validators/integers/builder/: state.rs
prelude/src/validators/map/: builder.rs
prelude/src/validators/map/builder/: state.rs
prelude/src/validators/message/: builder.rs
prelude/src/validators/message/builder/: state.rs
prelude/src/validators/numeric/: floats.rs  integers.rs  mod.rs
prelude/src/validators/repeated/: builder.rs
prelude/src/validators/repeated/builder/: state.rs
prelude/src/validators/string/: builder.rs  well_known_strings.rs
prelude/src/validators/string/builder/: state.rs  well_known.rs
prelude/src/validators/timestamp/: builder.rs
prelude/src/validators/timestamp/builder/: state.rs
prelude/templates/: enum.proto.j2  file.proto.j2  message.proto.j2  message_entry.proto.j2  oneof.proto.j2  option_value.proto.j2  render_macros.j2  service.proto.j2
proc-macro/: Cargo.toml
proc-macro/src/: builder_macro.rs  cel_try_into.rs  conversions.rs  enum_derive.rs  enum_proc_macro.rs  extension_derive.rs  field_data.rs  field_proto_impls.rs  file_macro.rs  item_cloners.rs  lib.rs  macros.rs  message_derive.rs  message_proc_macro.rs  message_schema_impl.rs  oneof_derive.rs  oneof_info.rs  oneof_proc_macro.rs  oneof_schema_impl.rs  package_macro.rs  path_utils.rs  process_field.rs  prost_attrs.rs  proto_field.rs  proto_map.rs  proto_types.rs  reflection.rs  rust_type.rs  schema_impls.rs  service_derive.rs  type_extraction.rs  validator_tokens.rs
proc-macro/src/attributes/: enum_attributes.rs  enum_parsing.rs  enum_variant_attributes.rs  extension_field_attributes.rs  field_attributes.rs  field_kind.rs  file_attributes.rs  message_attributes.rs  message_info.rs  message_parsing.rs  mod.rs  module_attributes.rs  module_enum_attributes.rs  module_enum_variant_attributes.rs  module_field_attributes.rs  module_macro.rs  module_macro_attributes.rs  module_message_attributes.rs  oneof_attributes.rs  oneof_info.rs  oneof_parsing.rs  package_attributes.rs  parsers.rs  process_fields.rs  reserved_names.rs  reserved_numbers.rs  service_attributes.rs  tag_allocator.rs
proc-macro/src/common_impls/: fallback_impls.rs  field_or_variant.rs  mod.rs  process_field.rs
proc-macro/src/impls/: conversions.rs  fallback_impls.rs  message_cel_checks.rs  message_consistency_checks.rs  message_validator_impl.rs  mod.rs  oneof_consistency_checks.rs  oneof_tags_check.rs  oneof_validator_impl.rs  validator_impl.rs
proc-macro/src/module_processing/: enum_module.rs  message_module.rs  message_parsing.rs  mod.rs  module_macro.rs
proc-macro/src/reflection/: any_rules.rs  bool_rules.rs  bytes_rules.rs  duration_rules.rs  enum_rules.rs  field_mask_rules.rs  field_rules.rs  map_rules.rs  message_derive.rs  message_rules.rs  numeric_rules.rs  oneof_derive.rs  pool_loader.rs  repeated_rules.rs  string_rules.rs  timestamp_rules.rs
test-no-std/: Cargo.toml
test-no-std/src/: main.rs
test-reflection/: Cargo.toml  build.rs
test-reflection/src/: lib.rs  main.rs
test-reflection/src/test/: bytes_tests.rs  const_rules_tests.rs  fail_fast_tests.rs  field_mask_tests.rs  map_tests.rs  message_tests.rs  numeric_tests.rs  oneof_tests.rs  repeated_tests.rs  timestamp_tests.rs
test-schemas/: Cargo.toml
test-schemas/src/: lib.rs  server_models.rs
test-schemas/src/tests/: consistency_tests.rs
test-server/: Cargo.toml  build.rs
test-server/src/: lib.rs  main.rs
testing/: Cargo.toml
testing/examples/: code_elimination.rs
testing/src/: lib.rs  main.rs
testing/src/tests/: cel_checks_tests.rs  custom_validators_tests.rs  enum_methods_tests.rs  extern_paths_tests.rs  maps_tests.rs  message_methods_tests.rs  mod.rs  oneof_tags_tests.rs  recursion_tests.rs  rendering_tests.rs  repeated_tests.rs  schema_tests.rs  tolerances_tests.rs  validation_tests.rs
testing/src/tests/cel_tests/: cel_rules_tests.rs  unique_rules_tests.rs
testing/src/tests/schema_tests/: conversions_tests.rs  inference_tests.rs  rendering_tests.rs
