[package]
name = "prelude"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true

[lints]
workspace = true

[dependencies]
regex = { version = "1", optional = true }
cel = { workspace = true, optional = true }

ordered-float = { workspace = true }
proto-types = { workspace = true }
paste = "1"
bytes = "1"
askama = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
log = "0.4"
owo-colors = { version = "4.2" }
inventory = "0.3"
ordermap = { version = "1", default-features = false }
prost = { workspace = true }
similar-asserts = { version = "1.7" }
float_eq = { workspace = true }
smallvec = "1"
proc-macro-impls = { path = "../proc-macro/" }
ipnetwork = "0.21"
fluent-uri = "0.4"
hashbrown = "0.16"

[features]
default = ["std", "regex", "cel"]

std = ["ordermap/std"]

reflection = ["proc-macro-impls/reflection"]
cel = ["std", "dep:cel", "proto-types/cel"]
regex = ["dep:regex"]
