[package]
name = "prelude"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true

[lints]
workspace = true

[dependencies]
regex = { version = "1", optional = true, default-features = false, features = [
  "perf",
  "unicode",
] }
cel = { workspace = true, optional = true }

ordered-float = { version = "5", default-features = false }
proto-types = { workspace = true, features = ["protovalidate"] }
paste = "1"
bytes = { version = "1", default-features = false }
askama = { version = "0.15", default-features = false, features = [
  "derive",
  "config",
], optional = true }
thiserror = { version = "2", default-features = false }
log = "0.4"
owo-colors = { version = "4" }
inventory = { version = "0.3", optional = true }
ordermap = { version = "1", default-features = false }
similar-asserts = { version = "1" }
float_eq = { version = "1", default-features = false }
smallvec = "1"
proc-macro-impls = { path = "../proc-macro/", default-features = false }
ipnet = { version = "2", default-features = false }
fluent-uri = { version = "0.4", default-features = false }
hashbrown = "0.16"
once_cell = { version = "1.21", default-features = false, features = [
  "alloc",
  "race",
] }
chrono = { version = "0.4", default-features = false, features = [
  "alloc",
], optional = true }

[features]
default = ["std", "regex", "cel", "chrono", "inventory"]

inventory = ["std", "dep:inventory", "proc-macro-impls/inventory"]

chrono = ["proto-types/chrono", "dep:chrono"]
chrono-wasm = ["chrono", "chrono/wasmbind", "proto-types/chrono-wasm"]

std = [
  "dep:askama",
  "ordermap/std",
  "ordered-float/std",
  "regex?/std",
  "proto-types/std",
  "bytes/std",
  "askama/std",
  "thiserror/std",
  "float_eq/std",
  "fluent-uri/std",
  "ipnet/std",
  "chrono?/std",
  "chrono?/now",
]

reflection = ["proc-macro-impls/reflection"]
cel = ["std", "dep:cel", "proto-types/cel", "proc-macro-impls/cel"]
regex = ["dep:regex"]
