[package]
name = "proc-macro-impls"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2", features = ["extra-traits", "full"] }
convert_case = "0.9"
proto-types = { workspace = true }
syn-utils = { path = "../../syn-utils/" }
prost-reflect = { version = "0.16", optional = true }

[features]
default = ["cel"]

reflection = ["dep:prost-reflect"]
cel = []
