[package]
name = "proc-macro-impls"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true

[lib]
proc-macro = true

[lints]
workspace = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2", features = ["extra-traits", "full"] }
convert_case = { workspace = true }
proto-types = { workspace = true }
syn-utils = { path = "../../syn-utils/" }
prost-reflect = { version = "0.16", optional = true }
paste = "1"
bytes = "1"
bool-enum = { workspace = true }

[features]
default = ["std", "cel"]

reflection = ["dep:prost-reflect"]
cel = ["std"]
std = []
