[package]
name = "test-no-std"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
prelude = { path = "../prelude", default-features = false, features = [
  "reflection",
] }
no-std-models = { path = "../no-std-models" }
prost = { workspace = true }
maplit = "1"

[build-dependencies]
prost-build = { workspace = true }
no-std-models = { path = "../no-std-models" }
prelude = { path = "../prelude", default-features = false, features = [
  "inventory",
  "std",
] }
builder = { path = "../builder", default-features = false }

[features]
reflection = []

[lints]
workspace = true
