[package]
name = "test-reflection"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
proto-types = { workspace = true }
prelude = { path = "../prelude/", features = ["reflection"] }
prost = { workspace = true }
paste = "1"
bytes = { workspace = true }
test-schemas = { path = "../test-schemas" }
maplit = "1.0"

[build-dependencies]
prost-build = "0.14"
prost-reflect = "0.16"

[lints]
workspace = true

[features]
reflection = []
