[package]
name = "test-reflection"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
proto-types = { workspace = true, features = ["default"] }
prelude = { path = "../prelude/", features = ["reflection"] }
prost = { workspace = true }
paste = "1"
bytes = { workspace = true }
test-schemas = { path = "../test-schemas" }
maplit = "1.0"
similar-asserts = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }
builder = { path = "../builder" }

[lints]
workspace = true

[features]
reflection = []
