[package]
name = "test-schemas"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true

[dev-dependencies]
similar-asserts = { workspace = true }

[dependencies]
maplit = "1"
prelude = { path = "../prelude/" }
prost = { workspace = true }
paste = "1"
bytes = { workspace = true }
proto-types = { workspace = true, features = ["diesel-sqlite"] }
diesel = { workspace = true }

[lints]
workspace = true
