[package]
name = "test-schemas"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true

[dev-dependencies]
similar-asserts = { workspace = true }

[dependencies]
maplit = "1"
prelude = { path = "../prelude/", features = ["common-types", "rpc-types"] }
prost = { workspace = true, features = ["std"] }
paste = "1"
bytes = { workspace = true }
proto-types = { workspace = true, features = ["diesel-sqlite", "all_common"] }
diesel = { workspace = true }

[lints]
workspace = true
