[package]
name = "test-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
tonic = { workspace = true }
tonic-prost = { workspace = true }
prost = { workspace = true }
testing = { path = "../testing/" }
proto-types = { workspace = true }

[build-dependencies]
tonic-prost-build = { workspace = true }
testing = { path = "../testing/" }

[lints]
workspace = true
