[package]
name = "test-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
tonic = { workspace = true }
tonic-prost = { workspace = true }
prelude = { path = "../prelude/" }
proto-types = { workspace = true, features = ["diesel-sqlite"] }
diesel = { workspace = true }
test-schemas = { path = "../test-schemas/" }

[build-dependencies]
tonic-prost-build = { workspace = true }
builder = { path = "../builder" }
test-schemas = { path = "../test-schemas/" }

[lints]
workspace = true
