[package]
name = "test-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
tonic = { workspace = true }
tonic-prost = { workspace = true }
prelude = { path = "../prelude/" }
proto-types = { workspace = true, features = ["diesel-sqlite"] }
diesel = { workspace = true }
deadpool-diesel = { version = "0.6", features = ["sqlite"] }
deadpool-sync = "0.1"
test-schemas = { path = "../test-schemas/" }
tokio = { version = "1.0", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }

[build-dependencies]
tonic-prost-build = { workspace = true }
builder = { path = "../builder" }
test-schemas = { path = "../test-schemas/" }

[lints]
workspace = true
