[package]
name = "testing"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true

[dev-dependencies]
prelude = { path = "../prelude", features = ["testing"] }

[lints]
workspace = true

[dependencies]
regex = { workspace = true }
bytes = "1"
proc-macro-impls = { path = "../proc-macro/" }
prelude = { path = "../prelude" }
proto-types = { workspace = true, features = ["serde"] }
prost = "0.14.1"
serde = { version = "1", features = ["derive"] }
protocheck-proc-macro = { version = "0.1", path = "../../protocheck/proc_macro/" }
protocheck = { version = "0.1", path = "../../protocheck/protocheck/" }
env_logger = "0.11"

[features]
abc = []
default = ["abc"]
