[package]
name = "testing"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true

[dev-dependencies]
similar-asserts = "1.7"

[lints]
workspace = true

[dependencies]
regex = { workspace = true }
bytes = "1"
prelude = { path = "../prelude" }
prost = "0.14.1"
env_logger = "0.11"

[features]
abc = []
default = ["abc"]
